Fix possible overlap in built-in article-style.css (issue #832)

--- a/article-style.css
+++ b/article-style.css
@@ -50,7 +50,7 @@ pre
 {
   display: block;
   padding-top: 1px;
-  margin-top: -9px;
+  margin-top: -8px;
   margin-bottom: 8px;
   background: #fefdeb;
 /*fix for invalid blg*/
